--- a/app/templates/lucky_draw.html
+++ b/app/templates/lucky_draw.html
@@ -33,7 +33,7 @@
                 ('guests', 'Guests Only', 'fas fa-user-plus'),
                 ('table-topics', 'Table Topic Speakers', 'fas fa-microphone'),
                 ('full-house', 'Full House', 'fas fa-home')
-                ], 'all-audience', label='Draw Type:', select_id='drawType') }}
+                ], 'all-audience', label='Eligible Audience:', select_id='drawType') }}
             </div>
 
             <div class="draw-buttons">
